<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se"><u>Cadastre-se</u></string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="boas_vindas">Olá,  %1$s</string>
    <string name="email_home">%1$s</string>
    <string name="acertos_num">%1$d \nacertos</string>
    <string name="ver_detalhes"><u>Ver detalhes</u></string>
    <string name="areas_conhecimento">Áreas de conhecimento</string>
    <string name="parabens">Parabéns!!</string>
    <string name="bom_trabalho">Bom trabalho!</string>
    <string name="tempo_de_resposta">Tempo de resposta</string>
    <string name="tenta_de_novo">Tentar de novo</string>
    <string name="voltar_ao_inicio"><u>Voltar ao início</u></string>
    <string name="que_pena">Que pena…</string>
    <string name="talvez_na_proxima">Talvez na próxima!</string>
    <string name="editar_foto"><u>Editar foto</u></string>
    <string name="salvar">Salvar</string>
    <string name="alteracoes_sucesso">Alterações salvas com sucesso!</string>
    <string name="alteracoes_erro">Erro ao salvar alterações. Tente novamente.</string>
    <string name="foto_de_perfil_do_usuario">Foto de perfil do usuário</string>
    <string name="proxima">Próxima</string>
    <string name="numero_acertos">%1$d /10</string>
    <string name="numero_erros">%1$d /10</string>
    <string name="tempo_em_numero">%1$d s</string>
    <string name="acertos_painel">Acertos: %1$d</string>
    <string name="tempo_painel">Tempo: %1$d s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voce_ainda_nao_jogou">Você ainda não jogou nenhum quiz!</string>
    <string name="compartilhar">Compartilhar</string>


</resources>