<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_claro"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".telas.LoginFragment"
    >

  <ImageView
      android:id="@+id/iv_login"
      android:layout_width="match_parent"
      android:layout_height="269dp"
      android:layout_marginBottom="25dp"
      android:src="@drawable/login" />

  <TextView
      android:id="@+id/tv_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:layout_marginStart="26dp"
      android:layout_marginBottom="25dp"
      android:fontFamily="@font/montserrat_regular"
      android:text="@string/login"
      android:textColor="@color/black"
      android:textSize="25sp" />

  <EditText
      android:id="@+id/ed_email"
      style="@style/text_input"
      android:layout_marginBottom="25dp"
      android:hint="@string/email"
      android:textColorHint="@color/preto_56"
      android:paddingHorizontal="15dp"
      android:inputType="textEmailAddress"
      />

  <EditText
      android:id="@+id/ed_senha"
      android:layout_marginBottom="25dp"
      android:textColorHint="@color/preto_56"
      style="@style/text_input"
      android:hint="@string/senha"
      android:paddingHorizontal="15dp"
      android:inputType="textPassword"
      />


  <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_entrar"
      style="@style/botao_submit"
      android:layout_marginBottom="70dp"
      android:paddingHorizontal="57dp"
      android:paddingVertical="15dp"
      android:text="@string/entrar"
      app:cornerRadius="12dp"
      />



  <TextView
      android:id="@+id/tv_cadastre_se"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/montserrat_regular"
      android:textSize="17sp"
      android:text="@string/cadastre_se"
      android:textColor="@color/preto_56" />


</LinearLayout>