<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".telas.HomeFragment"
    android:padding="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/azul_escuro"
    >

    <LinearLayout
            android:id="@+id/perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_foto_perfil"
                android:layout_width="58pt"
                android:layout_height="58pt"
                android:backgroundTint="@color/azul_escuro"
                app:cardCornerRadius="100dp"

                >
                <ImageView
                    android:id="@+id/img_foto_perfil"
                    android:layout_width="58pt"
                    android:layout_height="58pt"
                    tools:src="@tools:sample/avatars"
                    android:src="@drawable/perfil_padrao"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/foto_de_perfil_do_usuario" />
            </androidx.cardview.widget.CardView>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_margin="10dp"
                android:padding="5dp">
                <TextView
                    android:id="@+id/tv_boas_vindas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boas_vindas"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    tools:text="Olá, Amanda"
                    android:fontFamily="@font/montserrat_semibold"
                    />


                <TextView
                    android:id="@+id/tv_email"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_width="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/email_home"
                    tools:text="amanda@gmail.com"
                    />



            </LinearLayout>

        </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_estatisticas"
        android:layout_width="match_parent"
        android:layout_height="40pt"
        android:orientation="horizontal"
        android:backgroundTint="@color/bege"
        android:layout_margin="15dp"
        app:cardCornerRadius="12dp"
        >

        <TextView
            android:id="@+id/tv_acertos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/acertos_num"
            android:textSize="18sp"
            tools:text="36 \nacertos" />

        <TextView
            android:id="@+id/tv_ver_detalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_detalhes"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textColor="@color/verde"
            android:layout_marginStart="102pt"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_areas_conhecimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/areas_conhecimento"
        android:textSize="19sp"
        android:layout_gravity="start"
        android:layout_marginVertical="20dp"
        android:textColor="@color/white"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewHome"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/areas_list_item"
        />








</LinearLayout>

