<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telas.PerfilFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/azul_escuro"
    android:padding="20dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_foto_perfil"
        android:layout_width="68pt"
        android:layout_height="68pt"
        app:cardCornerRadius="100dp"
        android:backgroundTint="@color/azul_escuro"
        android:layout_marginVertical="20dp"
        >
        <ImageView
            android:id="@+id/img_foto_perfil"
            android:layout_width="68pt"
            android:layout_height="68pt"
            tools:src="@tools:sample/avatars"
            android:src="@drawable/perfil_padrao"
            android:scaleType="centerCrop"
            android:contentDescription="@string/foto_de_perfil_do_usuario" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_foto"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="15sp"
        android:layout_marginBottom="25dp"
        />

    <EditText
        android:id="@+id/ed_nome"
        style="@style/text_input"
        android:paddingHorizontal="15dp"
        android:layout_marginVertical="25dp"
        android:textColorHint="@color/black"

        />



    <EditText
        android:id="@+id/ed_email"
        style="@style/text_input"
        android:layout_marginBottom="25dp"
        android:textColorHint="@color/black"
        android:paddingHorizontal="15dp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/ed_senha"
        style="@style/text_input"
        android:layout_marginBottom="25dp"
        tools:hint="****"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_salvar"
        style="@style/botao_submit"
        android:layout_marginVertical="20dp"
        android:paddingHorizontal="57dp"
        android:paddingVertical="15dp"
        android:text="@string/salvar"
        app:cornerRadius="12dp" />
</LinearLayout>